--- a/Spring_basic/src/main/resources/application.yml
+++ b/Spring_basic/src/main/resources/application.yml
@@ -4,24 +4,45 @@
 #spring.datasource.name=root
 #spring.datasource.password=1234
 
-server:
-  port: 8080
+#server:
+#  port: 8080
+#spring:
+#  profiles:
+#    active: dev
+#  datasource:
+#    url: jdbc:mariadb//localhost:3306/member
+#    username: root
+#    password: 1234
+#
+#---
+#
+#server:
+#  port: 8080
+#spring:
+#  profiles:
+#    active: prod
+#  datasource:
+#    url: jdbc:mariadb//localhost:3306/member
+#    username: root
+#    password: 1234
+
+# 스키마(데이터베이스) 사전 생성 필요
 spring:
-  profiles:
-    active: dev
   datasource:
-    url: jdbc:mariadb//localhost:3306/member
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/basic
     username: root
     password: 1234
-
----
-
-server:
-  port: 8080
-spring:
-  profiles:
-    active: prod
-  datasource:
-    url: jdbc:mariadb//localhost:3306/member
-    username: root
-    password: 1234
+  jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MariaDBDialect
+    generate-ddl: true
+    hibernate:
+      # create = 테이블 삭제 후 생성
+      # update = 변경사항만 수정해 적용
+      # validate = 실제 DB 와의 차이만을 확인
+      # 실무에선 update 또는 validate
+      ddl-auto: create
+    # jap 가 자동으로 쿼리를 실행할때, 쿼리가 콘솔창에 보여지도록 설정
+    # jap 가 자동으로 쿼리를 실행할때, 쿼리가 콘솔창에 보여지도록 설정
+    show-sql: true
