--- a/Spring_basic/build.gradle
+++ b/Spring_basic/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 
 	// DB 연결 jdbc, mariadb 클라이언트
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+//	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.mariadb.jdbc:mariadb-java-client'
 
 	// jpa
