--- a/OrderService/src/main/resources/application.yml
+++ b/OrderService/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/orderservice
     username: root
-    password:
+    password: 1234
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MariaDBDialect
@@ -20,3 +20,7 @@ springfox:
   documentation:
     swagger-ui:
       enabled: true
+
+logging:
+  level:
+    root: info
