--- a/board/src/main/resources/application.yml
+++ b/board/src/main/resources/application.yml
@@ -11,3 +11,12 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+# trace < debug < info < error 순으로 로그레벨를 가짐
+# info 설정 시  trace, debug 로그는 출력되지 않음
+logging:
+  # 로그파일 경로와 파일명 지정
+  file:
+    name: logs/app.log
+  level:
+    root: info
