--- a/board/src/main/resources/application.yml
+++ b/board/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  session:
+    store-type: redis
+  redis:
+    host: localhost
+    port: 6379
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/board_spring
@@ -11,6 +16,11 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  # 임시 아이디, 비밀번호
+  security:
+    user:
+      name: user
+      password: 1234
 
 # trace < debug < info < error 순으로 로그레벨를 가짐
 # info 설정 시  trace, debug 로그는 출력되지 않음
