--- a/OrderService/build.gradle
+++ b/OrderService/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 //tasks.named('bootBuildImage') {
