--- a/OrderService/build.gradle
+++ b/OrderService/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
 
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
