--- a/OrderService/src/main/resources/application.yml
+++ b/OrderService/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
   security:
     user:
       name: user
-      password: 1234 #PasswordEncoder.encode(password)
+      password: passwordEncoder.encode(1234)
 
 springfox:
   documentation:
