--- a/OrderService/build.gradle
+++ b/OrderService/build.gradle
@@ -37,8 +37,16 @@ dependencies {
 	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
 
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// 시큐리티
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// 검사
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// JWT 관련 토큰
+	implementation "io.jsonwebtoken:jjwt-api:0.11.5"
+	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
+	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
 }
 
 //tasks.named('bootBuildImage') {
