--- a/orderservice-front/package.json
+++ b/orderservice-front/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^4.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
+    "vuex": "^4.1.0",
     "webpack": "^5.90.1"
   },
   "devDependencies": {
